--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,10 @@ button {
 button:hover {
   background: #b94e72;
 }
+
+.card-grid {
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+}
