--- a/src/App.css
+++ b/src/App.css
@@ -3,33 +3,33 @@ body {
 }
 
 .App {
-  max-width: 800px;
   margin: 20px auto;
   padding: 0 50px;
-  overflow: hidden;
   height: 100vh;
+  display: flex;
+  justify-content: center;
 }
 
 button {
   background: none;
   border: 2px solid #fff;
-  padding: 10px 12px;
+  padding: 10px 18px;
   border-radius: 4px;
   color: #fff;
-  font-weight: bold;
+  font-weight: bolder;
   cursor: pointer;
-  font-size: 1em;
+  font-size: 16px;
+  text-transform: uppercase;
 }
 button:hover {
   background: #b94e72;
 }
 
 .card-grid {
+  max-width: 600px;
   margin-top: 40px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 20px;
-}
-.card-grid:hover {
-  cursor: pointer;
+  grid-row-gap: 11px;
+  grid-column-gap: 22px;
 }
